added github link

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       <div class="row">
         <div class="col-6-md">
           <p>
-            Front-end web designer based in Providence, RI.
+            Front-end <a href="https://github.com/brandlos">web designer</a> based in Providence, RI.
           </p>
           <p>b. 1994</p>
           <p>
