redirected empanada to react project

--- a/index.html
+++ b/index.html
@@ -50,13 +50,11 @@
         <div class="col-6">
           <h4>The Empanada Project: Brooklyn</h4>
           <p class="small">
-            2020 — Bootstrap —
-            <a href="https://github.com/brandlos/empanada" target="_blank">View on GitHub</a>
+            2020 — Bootstrap/React —
+            <a href="https://github.com/brandlos/empanadareact" target="_blank">View on GitHub</a>
           </p>
           <p>
-            A landing site for my friends' catering business, based—clearly—in
-            Brooklyn. The site is meant to be simple and communicate the
-            locations and availibility of their pop-up shop.
+            A landing site for my friends' catering business, based in Brooklyn. The site is meant to be simple and communicate the locations and availibility of their pop-up shop.
           </p>
         </div>
         <div class="col-6">
