--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
             Contact me at
             <a href="mailto:c.brandon.roman@gmail.com"
               >c.brandon.roman@gmail.com</a
-            >.
+            > or on <a rel="me" href="https://glammr.us/@calo">Mastodon</a>.
           </p>
         </div>
       </div>
