redid all, using newcss

--- a/index.html
+++ b/index.html
@@ -1,39 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-t0-fit=no"
-    />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
-    <link rel="stylesheet" href="/css/style.css"
+      content="width=device-width, initial-scale=1.0"
+    >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/agave.min.css"> 
+    <link rel="stylesheet" href="/css/style.css">
   </head>
 
   <body>
-    <div>
+    <header>
       <h1>Brandon Roman</h1>
+      <p><a href="https://github.com/brandlos/">github</a> / <a href="https://www.instagram.com/awtekre/">instagram</a> / <a href="https://digipres.club/@calo" rel="me">mastodon</a></p>
+      <p><a href="mailto:ztamosmjm@mozmail.com"><button>contact</button></a></p>
+    </header>
+    <div>
       <blockquote cite="https://www.webdelsol.com/lutz/lutz-d.htm">
         <p>From time to time I show up in myself just long enough for people to know that they are not in the room alone. Usually, these are people who expect something from me — a near future, a not-too-distant future. What I tell them is limited to the people I have already had myself married against. Everything I say is to the best of my knowledge and next to nothing. It comes nowhere close.</p>
-        <footer>Garielle Lutz, <cite><a href="https://www.webdelsol.com/lutz/lutz-d.htm">Devotions</a></cite></footer>
+        <footer>Garielle Lutz, <cite><a href="https://www.webdelsol.com/lutz/lutz-d.htm" target="_blank">Devotions</a></cite></footer>
       </blockquote>
     </div>
     <div>
       <h2>Bio</h2>
-      <p>b. 1994</p>
+      <p><em>b. 1994</em></p>
       <p>I grew up in Pennsylvania. I live in Providence and am completing my MLIS at the University of Rhode Island. I work in restaurants and I like to ride my bike.</p>
     </div>
-    <div>
-      <h2>Links</h2>
-      <ul>
-        <li><a href="https://github.com/brandlos/">GitHub</a></li>
-        <li><a href="https://www.instagram.com/awtekre/">Instagram</a></li>
-        <li><a rel="me" href="https://digipres.club/@calo">Mastodon</a></li>
-        <li><a href="mailto:ztamosmjm@mozmail.com">email</a></li>
-      </ul>
-    </div>
-
   </body>
 </html>
+
