redid everything again

--- a/index.html
+++ b/index.html
@@ -7,27 +7,81 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     >
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
+    <link rel="stylesheet" href="/css/marx.css">
     <link rel="stylesheet" href="/css/style.css">
   </head>
 
   <body>
-    <header>
-      <h1>Brandon Roman</h1>
-      <p><a href="https://github.com/brandlos/">github</a> / <a href="https://www.instagram.com/awtekre/">instagram</a> / <a href="https://digipres.club/@calo" rel="me">mastodon</a></p>
-      <p><a href="mailto:ztamosmjm@mozmail.com"><button>contact</button></a></p>
-    </header>
+    <main>
+      <header>
+        <h1>C. Brandon Roman</h1>
+        <p><a href="mailto:ztamosmjm@mozmail.com">email</a> / <a href="https://www.instagram.com/awtekre/">instagram</a> / <a href="https://digipres.club/@calo" rel="me">mastodon</a></p>  
+      </header>
+
+      <hr/>
+
+      <section>
+        <h2>Bio (1994- )</h2>
+        <p>I grew up in Pennsylvania. I use <em>they/them</em> pronouns. I speak English and Spanish and a little bit of Dutch. I live in Providence and am completing my MLIS at the University of Rhode Island. I work in restaurants and I like to cook and write and read and ride my bike.</p>  
+      </section>
+
+      <br/>
+
+      <section>
+        <h2>Resume</h2>
+        <div>
+            <h3>Education</h3>
+            <dl>
+                <dt><a href="https://www.uri.edu/" target="_blank">University of Rhode Island</a></dt>
+                <dd><em>Kingston, RI (current)</em></dd>
+                <dd>Pursuing a Master of Library and Information Studies</dd>
+                <dt><a href="https://www.kenyon.edu/" target="_blank">Kenyon College</a></dt>
+                <dd><em>Gambier, OH (May 2016)</em></dd>
+                <dd>BA in English Literature, emphasis in creative writing</dd>
+                <dt><a href="https://www.exeter.ac.uk/" target="_blank">University of Exeter</a></dt>
+                <dd><em>Exeter, Devon, UK (May 2015)</em></dd>
+                <dd>Kenyon-Exeter program</dd>
+            </dl>
+        </div>
+        <div>
+            <h3>Work experience</h3>
+            <dl>
+                <dt><a href="https://www.provlib.org/research-collections/special-collections/" target="_blank">Providence Public Library</a>, Providence, RI — <em>Digital archive assistant</em></dt>
+                  <dd><em>(Feb 2024 - present)</em></dd>
+                  <dd>I'm completing two projects for the library: first, compiling metadata for a collection of archival whaling materials; then, digitizing the library's collection of whaling log books, which is the second-largest collection of its kind in the country.</dd>
+                <dt><a href="https://www.provlib.org/research-collections/special-collections/" target="_blank">Providence Public Library</a>, Providence, RI — <em>Special collections intern</em></dt>
+                  <dd><em>(May 2023 - Jan 2024)</em></dd>
+                  <dd>Learned basic operational procedures for a special collections archive. Processed collection of Rhode Island YMCA archives, including text, photographic, and digital materials. Researched history of the state and its relationship with the Y. Worked with lead archivist to create a plan for processing the collection. Created finding aid for all materials. Became familiar with Library of Congress cataloging.</dd>
+                <dt><a href="https://github.com/brandlos/" target="_blank">Freelance web design</a>, Providence, RI — <em>Programmer</em></dt>
+                  <dd><em>(Mar 2023 - present)</em></dd>
+                  <dd>Established professional connections through social media advertising. Coordinated Zoom meetings with clients. Created project timeline for clients. Tracked and reported all labor hours. Designed fine arts photography portfolio using Bootstrap, JavaScript, HTML, CSS. Delivered code to client and published site live via FTP.</dd>
+                <dt><a href="https://bacarorestaurant.net/" target="_blank">Bacaro</a>, Providence, RI — <em>Server</em></dt>
+                  <dd><em>(Jun 2023 - present)</em></dd>
+                  <dd>This is an Italian restaurant in Providence. It's been my first proper experience with fine dining; I've enjoyed my exposure to Italian wine and traditional cooking, as well.</dd>
+                <dt><a href="https://bottlesfinewine.com/" target="_blank">Bottles Fine Wine</a>, Providence, RI — <em>Administrator</em></dt>
+                  <dd><em>(May 2021 - May 2022)</em></dd>
+                  <dd>Handled all customer correspondence. Organized delivery and pickup orders with customers over the phone, and worked with delivery and front of house staff to ensure orders were ready on time. Handled all email inquiries and organized shipments of products in and out of state. Organized and worked various catering events for the store and The East End, its partner restaurant.</dd>
+              </dl>
+        </div>
+      </section>
+
+      <br/>
+
+      <footer>
+          <p><q>Even five years ago, when I had just changed my clothes,<br/>or it was at night, or I was out alone, I remember glancing,<br/>listening, surmising—after which I'd have had plenty.<br/>I remember when there was no nostalgia.</q><br/>~ Diane Williams</p>
+          <br/>
+        <p>© 2024. Site uses <a href="https://mblode.github.io/marx/" target="_blank">Marx</a> stylesheet.</p>
+      </footer>
+
+
+
+
+
+
+
+    </main>
     <div>
-      <blockquote cite="https://www.webdelsol.com/lutz/lutz-d.htm">
-        <p>From time to time I show up in myself just long enough for people to know that they are not in the room alone. Usually, these are people who expect something from me — a near future, a not-too-distant future. What I tell them is limited to the people I have already had myself married against. Everything I say is to the best of my knowledge and next to nothing. It comes nowhere close.</p>
-        <footer>Garielle Lutz, <cite><a href="https://www.webdelsol.com/lutz/lutz-d.htm" target="_blank">Devotions</a></cite></footer>
-      </blockquote>
-    </div>
-    <div>
-      <h2>Bio</h2>
-      <p><em>b. 1994</em></p>
-      <p>I grew up in Pennsylvania. I live in Providence and am completing my MLIS at the University of Rhode Island. I work in restaurants and I like to ride my bike.</p>
-    </div>
+
+  </div>
   </body>
 </html>
-
